fix mobile padding on smaller phones
was too big before,

--- a/assets/css/src/document.less
+++ b/assets/css/src/document.less
@@ -105,7 +105,7 @@ main {
 		 font-size: @font-size*0.8;
 	 }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: @phone) {
 	body {
 		font-size: @font-size*0.7;
 	}
