--- a/assets/css/src/layout.less
+++ b/assets/css/src/layout.less
@@ -122,3 +122,13 @@ footer {
 	}
 
 }
+
+@media screen and (max-width: 400px) {
+	header#head {
+		padding: @spaceLayout*0.5 @spaceLayout*0.1 @spaceLayout*0.25 @spaceLayout*0.1;
+	}
+	footer,
+	main {
+		padding: @spaceLayout*0.10;
+	}
+}
